BACKLOG-9625 Fix various css issues, add permission and visibility check, remove multiselect

--- a/src/javascript/components/contentEditor/EditVanityUrlsDialog.scss
+++ b/src/javascript/components/contentEditor/EditVanityUrlsDialog.scss
@@ -24,7 +24,7 @@
 }
 
 .dialogContent {
-  padding: 40px 0 !important;
+  padding: 70px 0 !important;
 
   border-top: 1px solid #e0e6ea;
   border-bottom: 1px solid #e0e6ea;
@@ -73,5 +73,5 @@
 }
 
 .actions {
-  justify-content: space-between !important;
+  justify-content: flex-end !important;
 }
